2005-03-16 Pawel Salek

	* libbalsa/imap/imap-handle.c: provide more info on SSL-related
	failures.

2005-03-15 Albrecht Dreß <albrecht dot dress at arcor dot de>

	* libbalsa/send.c: don't unref NULL GObject.

2005-03-15 13:03  PeterB

	* libbalsa/body.c: convert charset also for html parts (fixes
	bug 170456).
	* libbalsa/mailbox_imap.c: use delim to build path when renaming;
	use g_build_path() for IMAP paths.

2005-03-14 Albrecht Dreß <albrecht dot dress at arcor dot de>

	* libbalsa/message.h, libbalsa/send.c, libbalsa/send.h,
	src/balsa-app.c, src/balsa-app.h, src/balsa-message.c,
	src/pref-manager.c, src/save-restore.c, src/sendmsg-window.c: use
	only quoted-printable encoding.

2005-03-14 19:42  PeterB

	* libbalsa/body.c: use string returned by
	g_mime_filter_windows_real_charset() before it's deallocated.

2005-03-10 10:42  PeterB

	* libbalsa/body.c, libbalsa/filter.c, libbalsa/mailbox_local.c,
	libbalsa/message.c, libbalsa/mime.c, libbalsa/mime.h,
	src/sendmsg-window.c, src/sendmsg-window.h: keep track of charset
	instead of using g_mime_charset_best().

2005-03-08 18:40 Albrecht Dreß <albrecht dot dress at arcor dot de>

	* libbalsa/gmime-part-rfc2440.c: replace use of
	g_mime_content_type_[gs]et_parameter() by
	g_mime_object_[gs]et_content_type_parameter(), and
	g_mime_part_get_content_type() by g_mime_object_get_content_type().

2005-03-08 10:43  PeterB

	* libbalsa/: mailbox.c, mailbox.h: remember that we loaded filters.
	* src/filter-edit-callbacks.c: don't set empty filename; comment
	out unused LIBESD condition.
	* libbalsa/Makefile.am, libbalsa/filter-file.c, libbalsa/filter.h,
	libbalsa/libbalsa-conf.c, libbalsa/libbalsa-conf.h,
	libbalsa/mailbox-filter.c, src/save-restore.c: move all
	GnomeConfigIterator code to (new) libbalsa-conf.c; implement
	GnomeConfig version of libbalsa_conf_foreach_section.

2005-03-04 19:56  Albrecht Dreß <albrecht dot dress at arcor dot de>

	* libbalsa/gmime-part-rfc2440.c, src/balsa-message.c,