@@ -1,3 +1,12 @@
+2005-03-17 Pawel Salek
+
+	* libbalsa/imap/imap-handle.c: make the IDLE code behave better
+	on broken connections.
+	* src/balsa-app.h: add pipe_cmd field.
+	* src/main-window.c: allow for piping a message through an
+	external program. (bug 153386).
+	* src/save-restore.c: save and restore last pipe_cmd.
+	
 2005-03-16 Pawel Salek
 
 	* libbalsa/imap/imap-handle.c: provide more info on SSL-related
